feat: UI and refactoring
* Add templ files for experimentation #15
* Tailwindcss intro
* Extract service into a separate folder from handler
* Other minor fixes
