# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  github_com_blox-eng_backend_internal_model.CreateWorkReport:
+  github_com_blox-eng_app_internal_model.CreateWorkReport:
     properties:
       quantity_unit:
         example: Kg
@@ -17,7 +17,7 @@ definitions:
         example: John Doe
         type: string
     type: object
-  github_com_blox-eng_backend_internal_model.WorkReport:
+  github_com_blox-eng_app_internal_model.WorkReport:
     properties:
       created_at:
         example: "2020-01-01T00:00:00Z"
@@ -45,13 +45,13 @@ definitions:
         example: John Doe
         type: string
     type: object
-  github_com_blox-eng_backend_pkg_httputil.HTTPErr:
+  github_com_blox-eng_app_pkg_httputil.HTTPErr:
     properties:
       code:
         type: integer
       err: {}
     type: object
-  github_com_blox-eng_backend_pkg_httputil.Response:
+  github_com_blox-eng_app_pkg_httputil.Response:
     properties:
       data: {}
       status: {}
@@ -103,33 +103,33 @@ paths:
           description: A list of work reports
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.Response'
+            - $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.Response'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/github_com_blox-eng_backend_internal_model.WorkReport'
+                    $ref: '#/definitions/github_com_blox-eng_app_internal_model.WorkReport'
                   type: array
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
       summary: List work reports
       tags:
       - Work Report
@@ -143,7 +143,7 @@ paths:
         name: workReport
         required: true
         schema:
-          $ref: '#/definitions/github_com_blox-eng_backend_internal_model.CreateWorkReport'
+          $ref: '#/definitions/github_com_blox-eng_app_internal_model.CreateWorkReport'
       produces:
       - application/json
       responses:
@@ -151,31 +151,31 @@ paths:
           description: Created
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.Response'
+            - $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_blox-eng_backend_internal_model.WorkReport'
+                  $ref: '#/definitions/github_com_blox-eng_app_internal_model.WorkReport'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
       summary: Create a new work report
       tags:
       - Work Report
@@ -196,27 +196,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.Response'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
       summary: Delete a work report
       tags:
       - Work Report
@@ -237,31 +237,31 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.Response'
+            - $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_blox-eng_backend_internal_model.WorkReport'
+                  $ref: '#/definitions/github_com_blox-eng_app_internal_model.WorkReport'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
       summary: Get a specific work report
       tags:
       - Work Report
@@ -282,31 +282,31 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.Response'
+            - $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_blox-eng_backend_internal_model.WorkReport'
+                  $ref: '#/definitions/github_com_blox-eng_app_internal_model.WorkReport'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_blox-eng_backend_pkg_httputil.HTTPErr'
+            $ref: '#/definitions/github_com_blox-eng_app_pkg_httputil.HTTPErr'
       summary: Update an existing work report
       tags:
       - Work Report
